# Mechanic-Shop-System

./: README.md  display.py  inventory_management.py  job_management.py  job_manangement.py  jobs.json  main.py  parts.json  pyproject.toml
Mechanic_System.egg-info/: PKG-INFO  SOURCES.txt
package/: __init__.py  inventory_management.py  job_management.py  jobs.json  main.py  parts.json
