[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Mechanic-System"          
version = "0.1.0"
description = "A short description of my package"
readme = "README.md"
authors = [{ name="Miles Cutting"}]
license = "MIT"
dependencies = []

[project.urls]
Homepage = "https://github.com/Mitles16/Mechanic-Shop-System"

[tool.setuptools]
packages = ["package"]